// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>> Testcase ActionCreators creates a fetchPopularMoviesFulfilled 1`] = `
Object {
  "payload": Array [
    Object {
      "adult": false,
      "backdrop_path": "/puV2PFq42VQPItaygizgag8jrXa.jpg",
      "genre_ids": Array [
        878,
        12,
        16,
        35,
        10751,
      ],
      "id": 324852,
      "original_language": "en",
      "original_title": "Despicable Me 3",
      "overview": "Gru and his wife Lucy must stop former '80s child star Balthazar Bratt from achieving world domination.",
      "popularity": 138.11278,
      "poster_path": "/5qcUGqWoWhEsoQwNUrtf3y3fcWn.jpg",
      "release_date": "2017-06-29",
      "title": "Despicable Me 3",
      "video": false,
      "vote_average": 6.2,
      "vote_count": 834,
    },
    Object {
      "adult": false,
      "backdrop_path": "/6aUWe0GSl69wMTSWWexsorMIvwU.jpg",
      "genre_ids": Array [
        10751,
        14,
        10749,
      ],
      "id": 321612,
      "original_language": "en",
      "original_title": "Beauty and the Beast",
      "overview": "A live-action adaptation of Disney's version of the classic 'Beauty and the Beast' tale of a cursed prince and a beautiful young woman who helps him break the spell.",
      "popularity": 137.58477,
      "poster_path": "/tWqifoYuwLETmmasnGHO7xBjEtt.jpg",
      "release_date": "2017-03-16",
      "title": "Beauty and the Beast",
      "video": false,
      "vote_average": 6.8,
      "vote_count": 4246,
    },
    Object {
      "adult": false,
      "backdrop_path": "/fudEG1VUWuOqleXv6NwCExK0VLy.jpg",
      "genre_ids": Array [
        28,
        18,
        36,
        53,
        10752,
      ],
      "id": 374720,
      "original_language": "en",
      "original_title": "Dunkirk",
      "overview": "Miraculous evacuation of Allied soldiers from Belgium, Britain, Canada, and France, who were cut off and surrounded by the German army from the beaches and harbor of Dunkirk, France, between May 26 and June 04, 1940, during Battle of France in World War II.",
      "popularity": 106.555503,
      "poster_path": "/cUqEgoP6kj8ykfNjJx3Tl5zHCcN.jpg",
      "release_date": "2017-07-19",
      "title": "Dunkirk",
      "video": false,
      "vote_average": 7.6,
      "vote_count": 508,
    },
    Object {
      "adult": false,
      "backdrop_path": "/rjUl3pd1LHVOVfG4IGcyA1cId5l.jpg",
      "genre_ids": Array [
        878,
        28,
        18,
        53,
      ],
      "id": 119450,
      "original_language": "en",
      "original_title": "Dawn of the Planet of the Apes",
      "overview": "A group of scientists in San Francisco struggle to stay alive in the aftermath of a plague that is wiping out humanity, while Caesar tries to maintain dominance over his community of intelligent apes.",
      "popularity": 102.12686,
      "poster_path": "/qL0w9X1dVT3dnkZg3SrYtPFUHMs.jpg",
      "release_date": "2014-06-26",
      "title": "Dawn of the Planet of the Apes",
      "video": false,
      "vote_average": 7.3,
      "vote_count": 3888,
    },
    Object {
      "adult": false,
      "backdrop_path": "/uX7LXnsC7bZJZjn048UCOwkPXWJ.jpg",
      "genre_ids": Array [
        10751,
        16,
        12,
        35,
      ],
      "id": 211672,
      "original_language": "en",
      "original_title": "Minions",
      "overview": "Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.",
      "popularity": 89.387965,
      "poster_path": "/q0R4crx2SehcEEQEkYObktdeFy.jpg",
      "release_date": "2015-06-17",
      "title": "Minions",
      "video": false,
      "vote_average": 6.4,
      "vote_count": 3849,
    },
    Object {
      "adult": false,
      "backdrop_path": "/fn4n6uOYcB6Uh89nbNPoU2w80RV.jpg",
      "genre_ids": Array [
        28,
        12,
        878,
      ],
      "id": 315635,
      "original_language": "en",
      "original_title": "Spider-Man: Homecoming",
      "overview": "Following the events of Captain America: Civil War, Peter Parker, with the help of his mentor Tony Stark, tries to balance his life as an ordinary high school student in Queens, New York City, with fighting crime as his superhero alter ego Spider-Man as a new threat, the Vulture, emerges.",
      "popularity": 74.357296,
      "poster_path": "/c24sv2weTHPsmDa7jEMN0m2P3RT.jpg",
      "release_date": "2017-07-05",
      "title": "Spider-Man: Homecoming",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 1613,
    },
    Object {
      "adult": false,
      "backdrop_path": "/avECxC9c0yAJZ90BMXOU0VY6v66.jpg",
      "genre_ids": Array [
        53,
        28,
        18,
        878,
      ],
      "id": 61791,
      "original_language": "en",
      "original_title": "Rise of the Planet of the Apes",
      "overview": "Scientist Will Rodman is determined to find a cure for Alzheimer's, the disease which has slowly consumed his father. Will feels certain he is close to a breakthrough and tests his latest serum on apes, noticing dramatic increases in intelligence and brain activity in the primate subjects – especially Caesar, his pet chimpanzee.",
      "popularity": 69.718157,
      "poster_path": "/esqXMJv6PiK7GJVRwd2FA3SZUoW.jpg",
      "release_date": "2011-08-03",
      "title": "Rise of the Planet of the Apes",
      "video": false,
      "vote_average": 7,
      "vote_count": 3832,
    },
    Object {
      "adult": false,
      "backdrop_path": "/w4ZYFLJbiqZyvCcGHgvaHD6lTqQ.jpg",
      "genre_ids": Array [
        18,
        878,
        10752,
      ],
      "id": 281338,
      "original_language": "en",
      "original_title": "War for the Planet of the Apes",
      "overview": "Caesar and his apes are forced into a deadly conflict with an army of humans led by a ruthless Colonel. After the apes suffer unimaginable losses, Caesar wrestles with his darker instincts and begins his own mythic quest to avenge his kind. As the journey finally brings them face to face, Caesar and the Colonel are pitted against each other in an epic battle that will determine the fate of both their species and the future of the planet.",
      "popularity": 60.217772,
      "poster_path": "/2n4x2FRcmMIsHxcucxvWxb0Yry6.jpg",
      "release_date": "2017-07-11",
      "title": "War for the Planet of the Apes",
      "video": false,
      "vote_average": 6.6,
      "vote_count": 531,
    },
    Object {
      "adult": false,
      "backdrop_path": "/5pAGnkFYSsFJ99ZxDIYnhQbQFXs.jpg",
      "genre_ids": Array [
        28,
        18,
        878,
      ],
      "id": 263115,
      "original_language": "en",
      "original_title": "Logan",
      "overview": "In the near future, a weary Logan cares for an ailing Professor X in a hideout on the Mexican border. But Logan's attempts to hide from the world and his legacy are upended when a young mutant arrives, pursued by dark forces.",
      "popularity": 43.407173,
      "poster_path": "/gGBu0hKw9BGddG8RkRAMX7B6NDB.jpg",
      "release_date": "2017-02-28",
      "title": "Logan",
      "video": false,
      "vote_average": 7.5,
      "vote_count": 4977,
    },
    Object {
      "adult": false,
      "backdrop_path": "/jGPSVArC0GS2VVc0aGAqGTjfFOG.jpg",
      "genre_ids": Array [
        28,
        80,
        18,
        9648,
        878,
        53,
      ],
      "id": 315837,
      "original_language": "en",
      "original_title": "Ghost in the Shell",
      "overview": "In the near future, Major is the first of her kind: a human saved from a terrible crash, then cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.",
      "popularity": 42.007343,
      "poster_path": "/myRzRzCxdfUWjkJWgpHHZ1oGkJd.jpg",
      "release_date": "2017-03-29",
      "title": "Ghost in the Shell",
      "video": false,
      "vote_average": 5.9,
      "vote_count": 1724,
    },
    Object {
      "adult": false,
      "backdrop_path": "/bHarw8xrmQeqf3t8HpuMY7zoK4x.jpg",
      "genre_ids": Array [
        28,
        878,
        12,
      ],
      "id": 118340,
      "original_language": "en",
      "original_title": "Guardians of the Galaxy",
      "overview": "Light years from Earth, 26 years after being abducted, Peter Quill finds himself the prime target of a manhunt after discovering an orb wanted by Ronan the Accuser.",
      "popularity": 40.628269,
      "poster_path": "/y31QB9kn3XSudA15tV7UWQ9XLuW.jpg",
      "release_date": "2014-07-30",
      "title": "Guardians of the Galaxy",
      "video": false,
      "vote_average": 7.8,
      "vote_count": 8681,
    },
    Object {
      "adult": false,
      "backdrop_path": "/pGwChWiAY1bdoxL79sXmaFBlYJH.jpg",
      "genre_ids": Array [
        28,
        12,
        14,
      ],
      "id": 293167,
      "original_language": "en",
      "original_title": "Kong: Skull Island",
      "overview": "Explore the mysterious and dangerous home of the king of the apes as a team of explorers ventures deep inside the treacherous, primordial island.",
      "popularity": 35.587086,
      "poster_path": "/r2517Vz9EhDhj88qwbDVj8DCRZN.jpg",
      "release_date": "2017-03-08",
      "title": "Kong: Skull Island",
      "video": false,
      "vote_average": 6.1,
      "vote_count": 2467,
    },
    Object {
      "adult": false,
      "backdrop_path": "/dkMD5qlogeRMiEixC4YNPUvax2T.jpg",
      "genre_ids": Array [
        28,
        12,
        878,
        53,
      ],
      "id": 135397,
      "original_language": "en",
      "original_title": "Jurassic World",
      "overview": "Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond.",
      "popularity": 34.514415,
      "poster_path": "/jjBgi2r5cRt36xF6iNUEhzscEcb.jpg",
      "release_date": "2015-06-09",
      "title": "Jurassic World",
      "video": false,
      "vote_average": 6.5,
      "vote_count": 7982,
    },
    Object {
      "adult": false,
      "backdrop_path": "/xu9zaAevzQ5nnrsXN6JcahLnG4i.jpg",
      "genre_ids": Array [
        12,
        18,
        878,
      ],
      "id": 157336,
      "original_language": "en",
      "original_title": "Interstellar",
      "overview": "Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage.",
      "popularity": 34.176259,
      "poster_path": "/nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg",
      "release_date": "2014-11-05",
      "title": "Interstellar",
      "video": false,
      "vote_average": 8.1,
      "vote_count": 9820,
    },
    Object {
      "adult": false,
      "backdrop_path": "/eRJMFHOn5jDmfWWPfTs5RflApgW.jpg",
      "genre_ids": Array [
        18,
        80,
        53,
      ],
      "id": 339692,
      "original_language": "en",
      "original_title": "Shot Caller",
      "overview": "A newly released prison gangster is forced by the leaders of his gang to orchestrate a major crime with a brutal rival gang on the streets of Southern California.",
      "popularity": 33.103553,
      "poster_path": "/qLmLz2wtyYvmW8Ult3l2ngOnW8v.jpg",
      "release_date": "2017-07-13",
      "title": "Shot Caller",
      "video": false,
      "vote_average": 7.2,
      "vote_count": 44,
    },
    Object {
      "adult": false,
      "backdrop_path": "/L5QRL1O3fGs2hH1LbtYyVl8Tce.jpg",
      "genre_ids": Array [
        12,
        878,
        53,
      ],
      "id": 262500,
      "original_language": "en",
      "original_title": "Insurgent",
      "overview": "Beatrice Prior must confront her inner demons and continue her fight against a powerful alliance which threatens to tear her society apart.",
      "popularity": 33.059004,
      "poster_path": "/6w1VjTPTjTaA5oNvsAg0y4H6bou.jpg",
      "release_date": "2015-03-18",
      "title": "Insurgent",
      "video": false,
      "vote_average": 6.2,
      "vote_count": 3479,
    },
    Object {
      "adult": false,
      "backdrop_path": "/n1y094tVDFATSzkTnFxoGZ1qNsG.jpg",
      "genre_ids": Array [
        28,
        12,
        35,
        10749,
      ],
      "id": 293660,
      "original_language": "en",
      "original_title": "Deadpool",
      "overview": "Based upon Marvel Comics’ most unconventional anti-hero, DEADPOOL tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.",
      "popularity": 32.418134,
      "poster_path": "/inVq3FRqcYIRl2la8iZikYYxFNR.jpg",
      "release_date": "2016-02-09",
      "title": "Deadpool",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 9668,
    },
    Object {
      "adult": false,
      "backdrop_path": "/phszHPFVhPHhMZgo0fWTKBDQsJA.jpg",
      "genre_ids": Array [
        28,
        12,
        878,
        53,
      ],
      "id": 76341,
      "original_language": "en",
      "original_title": "Mad Max: Fury Road",
      "overview": "An apocalyptic story set in the furthest reaches of our planet, in a stark desert landscape where humanity is broken, and most everyone is crazed fighting for the necessities of life. Within this world exist two rebels on the run who just might be able to restore order. There's Max, a man of action and a man of few words, who seeks peace of mind following the loss of his wife and child in the aftermath of the chaos. And Furiosa, a woman of action and a woman who believes her path to survival may be achieved if she can make it across the desert back to her childhood homeland.",
      "popularity": 32.24831,
      "poster_path": "/kqjL17yufvn9OVLyXYpvtyrFfak.jpg",
      "release_date": "2015-05-13",
      "title": "Mad Max: Fury Road",
      "video": false,
      "vote_average": 7.2,
      "vote_count": 8699,
    },
    Object {
      "adult": false,
      "backdrop_path": "/8AUQ7YlJJA9C8kWk8P4YNHIcFDE.jpg",
      "genre_ids": Array [
        12,
        14,
        28,
      ],
      "id": 22,
      "original_language": "en",
      "original_title": "Pirates of the Caribbean: The Curse of the Black Pearl",
      "overview": "Jack Sparrow, a freewheeling 17th-century pirate who roams the Caribbean Sea, butts heads with a rival pirate bent on pillaging the village of Port Royal. When the governor's daughter is kidnapped, Sparrow decides to help the girl's love save her. But their seafaring mission is hardly simple.",
      "popularity": 31.729419,
      "poster_path": "/tkt9xR1kNX5R9rCebASKck44si2.jpg",
      "release_date": "2003-07-09",
      "title": "Pirates of the Caribbean: The Curse of the Black Pearl",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 6297,
    },
    Object {
      "adult": false,
      "backdrop_path": "/mFb0ygcue4ITixDkdr7wm1Tdarx.jpg",
      "genre_ids": Array [
        28,
        53,
      ],
      "id": 245891,
      "original_language": "en",
      "original_title": "John Wick",
      "overview": "Ex-hitman John Wick comes out of retirement to track down the gangsters that took everything from him.",
      "popularity": 30.405095,
      "poster_path": "/5vHssUeVe25bMrof1HyaPyWgaP.jpg",
      "release_date": "2014-10-22",
      "title": "John Wick",
      "video": false,
      "vote_average": 6.9,
      "vote_count": 4842,
    },
  ],
  "type": "FETCH_POPULAR_MOVIES_FULFILLED",
}
`;

exports[`>> Testcase ActionCreators creates a fetchPopularMoviesRejected 1`] = `
Object {
  "error": true,
  "payload": "404",
  "type": "FETCH_POPULAR_MOVIES_REJECTED",
}
`;

exports[`>> Testcase ActionCreators creates a fetchPopularMoviesRequested 1`] = `
Object {
  "type": "FETCH_POPULAR_MOVIES_REQUESTED",
}
`;

exports[`>> Testcase ActionCreators creates a fetchTopVotedMoviesFulfilled 1`] = `
Object {
  "payload": Array [
    Object {
      "adult": false,
      "backdrop_path": "/puV2PFq42VQPItaygizgag8jrXa.jpg",
      "genre_ids": Array [
        878,
        12,
        16,
        35,
        10751,
      ],
      "id": 324852,
      "original_language": "en",
      "original_title": "Despicable Me 3",
      "overview": "Gru and his wife Lucy must stop former '80s child star Balthazar Bratt from achieving world domination.",
      "popularity": 138.11278,
      "poster_path": "/5qcUGqWoWhEsoQwNUrtf3y3fcWn.jpg",
      "release_date": "2017-06-29",
      "title": "Despicable Me 3",
      "video": false,
      "vote_average": 6.2,
      "vote_count": 834,
    },
    Object {
      "adult": false,
      "backdrop_path": "/6aUWe0GSl69wMTSWWexsorMIvwU.jpg",
      "genre_ids": Array [
        10751,
        14,
        10749,
      ],
      "id": 321612,
      "original_language": "en",
      "original_title": "Beauty and the Beast",
      "overview": "A live-action adaptation of Disney's version of the classic 'Beauty and the Beast' tale of a cursed prince and a beautiful young woman who helps him break the spell.",
      "popularity": 137.58477,
      "poster_path": "/tWqifoYuwLETmmasnGHO7xBjEtt.jpg",
      "release_date": "2017-03-16",
      "title": "Beauty and the Beast",
      "video": false,
      "vote_average": 6.8,
      "vote_count": 4246,
    },
    Object {
      "adult": false,
      "backdrop_path": "/fudEG1VUWuOqleXv6NwCExK0VLy.jpg",
      "genre_ids": Array [
        28,
        18,
        36,
        53,
        10752,
      ],
      "id": 374720,
      "original_language": "en",
      "original_title": "Dunkirk",
      "overview": "Miraculous evacuation of Allied soldiers from Belgium, Britain, Canada, and France, who were cut off and surrounded by the German army from the beaches and harbor of Dunkirk, France, between May 26 and June 04, 1940, during Battle of France in World War II.",
      "popularity": 106.555503,
      "poster_path": "/cUqEgoP6kj8ykfNjJx3Tl5zHCcN.jpg",
      "release_date": "2017-07-19",
      "title": "Dunkirk",
      "video": false,
      "vote_average": 7.6,
      "vote_count": 508,
    },
    Object {
      "adult": false,
      "backdrop_path": "/rjUl3pd1LHVOVfG4IGcyA1cId5l.jpg",
      "genre_ids": Array [
        878,
        28,
        18,
        53,
      ],
      "id": 119450,
      "original_language": "en",
      "original_title": "Dawn of the Planet of the Apes",
      "overview": "A group of scientists in San Francisco struggle to stay alive in the aftermath of a plague that is wiping out humanity, while Caesar tries to maintain dominance over his community of intelligent apes.",
      "popularity": 102.12686,
      "poster_path": "/qL0w9X1dVT3dnkZg3SrYtPFUHMs.jpg",
      "release_date": "2014-06-26",
      "title": "Dawn of the Planet of the Apes",
      "video": false,
      "vote_average": 7.3,
      "vote_count": 3888,
    },
    Object {
      "adult": false,
      "backdrop_path": "/uX7LXnsC7bZJZjn048UCOwkPXWJ.jpg",
      "genre_ids": Array [
        10751,
        16,
        12,
        35,
      ],
      "id": 211672,
      "original_language": "en",
      "original_title": "Minions",
      "overview": "Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the world.",
      "popularity": 89.387965,
      "poster_path": "/q0R4crx2SehcEEQEkYObktdeFy.jpg",
      "release_date": "2015-06-17",
      "title": "Minions",
      "video": false,
      "vote_average": 6.4,
      "vote_count": 3849,
    },
    Object {
      "adult": false,
      "backdrop_path": "/fn4n6uOYcB6Uh89nbNPoU2w80RV.jpg",
      "genre_ids": Array [
        28,
        12,
        878,
      ],
      "id": 315635,
      "original_language": "en",
      "original_title": "Spider-Man: Homecoming",
      "overview": "Following the events of Captain America: Civil War, Peter Parker, with the help of his mentor Tony Stark, tries to balance his life as an ordinary high school student in Queens, New York City, with fighting crime as his superhero alter ego Spider-Man as a new threat, the Vulture, emerges.",
      "popularity": 74.357296,
      "poster_path": "/c24sv2weTHPsmDa7jEMN0m2P3RT.jpg",
      "release_date": "2017-07-05",
      "title": "Spider-Man: Homecoming",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 1613,
    },
    Object {
      "adult": false,
      "backdrop_path": "/avECxC9c0yAJZ90BMXOU0VY6v66.jpg",
      "genre_ids": Array [
        53,
        28,
        18,
        878,
      ],
      "id": 61791,
      "original_language": "en",
      "original_title": "Rise of the Planet of the Apes",
      "overview": "Scientist Will Rodman is determined to find a cure for Alzheimer's, the disease which has slowly consumed his father. Will feels certain he is close to a breakthrough and tests his latest serum on apes, noticing dramatic increases in intelligence and brain activity in the primate subjects – especially Caesar, his pet chimpanzee.",
      "popularity": 69.718157,
      "poster_path": "/esqXMJv6PiK7GJVRwd2FA3SZUoW.jpg",
      "release_date": "2011-08-03",
      "title": "Rise of the Planet of the Apes",
      "video": false,
      "vote_average": 7,
      "vote_count": 3832,
    },
    Object {
      "adult": false,
      "backdrop_path": "/w4ZYFLJbiqZyvCcGHgvaHD6lTqQ.jpg",
      "genre_ids": Array [
        18,
        878,
        10752,
      ],
      "id": 281338,
      "original_language": "en",
      "original_title": "War for the Planet of the Apes",
      "overview": "Caesar and his apes are forced into a deadly conflict with an army of humans led by a ruthless Colonel. After the apes suffer unimaginable losses, Caesar wrestles with his darker instincts and begins his own mythic quest to avenge his kind. As the journey finally brings them face to face, Caesar and the Colonel are pitted against each other in an epic battle that will determine the fate of both their species and the future of the planet.",
      "popularity": 60.217772,
      "poster_path": "/2n4x2FRcmMIsHxcucxvWxb0Yry6.jpg",
      "release_date": "2017-07-11",
      "title": "War for the Planet of the Apes",
      "video": false,
      "vote_average": 6.6,
      "vote_count": 531,
    },
    Object {
      "adult": false,
      "backdrop_path": "/5pAGnkFYSsFJ99ZxDIYnhQbQFXs.jpg",
      "genre_ids": Array [
        28,
        18,
        878,
      ],
      "id": 263115,
      "original_language": "en",
      "original_title": "Logan",
      "overview": "In the near future, a weary Logan cares for an ailing Professor X in a hideout on the Mexican border. But Logan's attempts to hide from the world and his legacy are upended when a young mutant arrives, pursued by dark forces.",
      "popularity": 43.407173,
      "poster_path": "/gGBu0hKw9BGddG8RkRAMX7B6NDB.jpg",
      "release_date": "2017-02-28",
      "title": "Logan",
      "video": false,
      "vote_average": 7.5,
      "vote_count": 4977,
    },
    Object {
      "adult": false,
      "backdrop_path": "/jGPSVArC0GS2VVc0aGAqGTjfFOG.jpg",
      "genre_ids": Array [
        28,
        80,
        18,
        9648,
        878,
        53,
      ],
      "id": 315837,
      "original_language": "en",
      "original_title": "Ghost in the Shell",
      "overview": "In the near future, Major is the first of her kind: a human saved from a terrible crash, then cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.",
      "popularity": 42.007343,
      "poster_path": "/myRzRzCxdfUWjkJWgpHHZ1oGkJd.jpg",
      "release_date": "2017-03-29",
      "title": "Ghost in the Shell",
      "video": false,
      "vote_average": 5.9,
      "vote_count": 1724,
    },
    Object {
      "adult": false,
      "backdrop_path": "/bHarw8xrmQeqf3t8HpuMY7zoK4x.jpg",
      "genre_ids": Array [
        28,
        878,
        12,
      ],
      "id": 118340,
      "original_language": "en",
      "original_title": "Guardians of the Galaxy",
      "overview": "Light years from Earth, 26 years after being abducted, Peter Quill finds himself the prime target of a manhunt after discovering an orb wanted by Ronan the Accuser.",
      "popularity": 40.628269,
      "poster_path": "/y31QB9kn3XSudA15tV7UWQ9XLuW.jpg",
      "release_date": "2014-07-30",
      "title": "Guardians of the Galaxy",
      "video": false,
      "vote_average": 7.8,
      "vote_count": 8681,
    },
    Object {
      "adult": false,
      "backdrop_path": "/pGwChWiAY1bdoxL79sXmaFBlYJH.jpg",
      "genre_ids": Array [
        28,
        12,
        14,
      ],
      "id": 293167,
      "original_language": "en",
      "original_title": "Kong: Skull Island",
      "overview": "Explore the mysterious and dangerous home of the king of the apes as a team of explorers ventures deep inside the treacherous, primordial island.",
      "popularity": 35.587086,
      "poster_path": "/r2517Vz9EhDhj88qwbDVj8DCRZN.jpg",
      "release_date": "2017-03-08",
      "title": "Kong: Skull Island",
      "video": false,
      "vote_average": 6.1,
      "vote_count": 2467,
    },
    Object {
      "adult": false,
      "backdrop_path": "/dkMD5qlogeRMiEixC4YNPUvax2T.jpg",
      "genre_ids": Array [
        28,
        12,
        878,
        53,
      ],
      "id": 135397,
      "original_language": "en",
      "original_title": "Jurassic World",
      "overview": "Twenty-two years after the events of Jurassic Park, Isla Nublar now features a fully functioning dinosaur theme park, Jurassic World, as originally envisioned by John Hammond.",
      "popularity": 34.514415,
      "poster_path": "/jjBgi2r5cRt36xF6iNUEhzscEcb.jpg",
      "release_date": "2015-06-09",
      "title": "Jurassic World",
      "video": false,
      "vote_average": 6.5,
      "vote_count": 7982,
    },
    Object {
      "adult": false,
      "backdrop_path": "/xu9zaAevzQ5nnrsXN6JcahLnG4i.jpg",
      "genre_ids": Array [
        12,
        18,
        878,
      ],
      "id": 157336,
      "original_language": "en",
      "original_title": "Interstellar",
      "overview": "Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage.",
      "popularity": 34.176259,
      "poster_path": "/nBNZadXqJSdt05SHLqgT0HuC5Gm.jpg",
      "release_date": "2014-11-05",
      "title": "Interstellar",
      "video": false,
      "vote_average": 8.1,
      "vote_count": 9820,
    },
    Object {
      "adult": false,
      "backdrop_path": "/eRJMFHOn5jDmfWWPfTs5RflApgW.jpg",
      "genre_ids": Array [
        18,
        80,
        53,
      ],
      "id": 339692,
      "original_language": "en",
      "original_title": "Shot Caller",
      "overview": "A newly released prison gangster is forced by the leaders of his gang to orchestrate a major crime with a brutal rival gang on the streets of Southern California.",
      "popularity": 33.103553,
      "poster_path": "/qLmLz2wtyYvmW8Ult3l2ngOnW8v.jpg",
      "release_date": "2017-07-13",
      "title": "Shot Caller",
      "video": false,
      "vote_average": 7.2,
      "vote_count": 44,
    },
    Object {
      "adult": false,
      "backdrop_path": "/L5QRL1O3fGs2hH1LbtYyVl8Tce.jpg",
      "genre_ids": Array [
        12,
        878,
        53,
      ],
      "id": 262500,
      "original_language": "en",
      "original_title": "Insurgent",
      "overview": "Beatrice Prior must confront her inner demons and continue her fight against a powerful alliance which threatens to tear her society apart.",
      "popularity": 33.059004,
      "poster_path": "/6w1VjTPTjTaA5oNvsAg0y4H6bou.jpg",
      "release_date": "2015-03-18",
      "title": "Insurgent",
      "video": false,
      "vote_average": 6.2,
      "vote_count": 3479,
    },
    Object {
      "adult": false,
      "backdrop_path": "/n1y094tVDFATSzkTnFxoGZ1qNsG.jpg",
      "genre_ids": Array [
        28,
        12,
        35,
        10749,
      ],
      "id": 293660,
      "original_language": "en",
      "original_title": "Deadpool",
      "overview": "Based upon Marvel Comics’ most unconventional anti-hero, DEADPOOL tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.",
      "popularity": 32.418134,
      "poster_path": "/inVq3FRqcYIRl2la8iZikYYxFNR.jpg",
      "release_date": "2016-02-09",
      "title": "Deadpool",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 9668,
    },
    Object {
      "adult": false,
      "backdrop_path": "/phszHPFVhPHhMZgo0fWTKBDQsJA.jpg",
      "genre_ids": Array [
        28,
        12,
        878,
        53,
      ],
      "id": 76341,
      "original_language": "en",
      "original_title": "Mad Max: Fury Road",
      "overview": "An apocalyptic story set in the furthest reaches of our planet, in a stark desert landscape where humanity is broken, and most everyone is crazed fighting for the necessities of life. Within this world exist two rebels on the run who just might be able to restore order. There's Max, a man of action and a man of few words, who seeks peace of mind following the loss of his wife and child in the aftermath of the chaos. And Furiosa, a woman of action and a woman who believes her path to survival may be achieved if she can make it across the desert back to her childhood homeland.",
      "popularity": 32.24831,
      "poster_path": "/kqjL17yufvn9OVLyXYpvtyrFfak.jpg",
      "release_date": "2015-05-13",
      "title": "Mad Max: Fury Road",
      "video": false,
      "vote_average": 7.2,
      "vote_count": 8699,
    },
    Object {
      "adult": false,
      "backdrop_path": "/8AUQ7YlJJA9C8kWk8P4YNHIcFDE.jpg",
      "genre_ids": Array [
        12,
        14,
        28,
      ],
      "id": 22,
      "original_language": "en",
      "original_title": "Pirates of the Caribbean: The Curse of the Black Pearl",
      "overview": "Jack Sparrow, a freewheeling 17th-century pirate who roams the Caribbean Sea, butts heads with a rival pirate bent on pillaging the village of Port Royal. When the governor's daughter is kidnapped, Sparrow decides to help the girl's love save her. But their seafaring mission is hardly simple.",
      "popularity": 31.729419,
      "poster_path": "/tkt9xR1kNX5R9rCebASKck44si2.jpg",
      "release_date": "2003-07-09",
      "title": "Pirates of the Caribbean: The Curse of the Black Pearl",
      "video": false,
      "vote_average": 7.4,
      "vote_count": 6297,
    },
    Object {
      "adult": false,
      "backdrop_path": "/mFb0ygcue4ITixDkdr7wm1Tdarx.jpg",
      "genre_ids": Array [
        28,
        53,
      ],
      "id": 245891,
      "original_language": "en",
      "original_title": "John Wick",
      "overview": "Ex-hitman John Wick comes out of retirement to track down the gangsters that took everything from him.",
      "popularity": 30.405095,
      "poster_path": "/5vHssUeVe25bMrof1HyaPyWgaP.jpg",
      "release_date": "2014-10-22",
      "title": "John Wick",
      "video": false,
      "vote_average": 6.9,
      "vote_count": 4842,
    },
  ],
  "type": "FETCH_TOP_VOTED_MOVIES_FULFILLED",
}
`;

exports[`>> Testcase ActionCreators creates a fetchTopVotedMoviesRejected 1`] = `
Object {
  "error": true,
  "payload": "404",
  "type": "FETCH_TOP_VOTED_MOVIES_REJECTED",
}
`;

exports[`>> Testcase ActionCreators creates a getPopularMovieBackdrops 1`] = `
Object {
  "payload": Array [
    "/puV2PFq42VQPItaygizgag8jrXa.jpg",
    "/6aUWe0GSl69wMTSWWexsorMIvwU.jpg",
    "/fudEG1VUWuOqleXv6NwCExK0VLy.jpg",
    "/rjUl3pd1LHVOVfG4IGcyA1cId5l.jpg",
    "/uX7LXnsC7bZJZjn048UCOwkPXWJ.jpg",
    "/fn4n6uOYcB6Uh89nbNPoU2w80RV.jpg",
    "/avECxC9c0yAJZ90BMXOU0VY6v66.jpg",
    "/w4ZYFLJbiqZyvCcGHgvaHD6lTqQ.jpg",
    "/5pAGnkFYSsFJ99ZxDIYnhQbQFXs.jpg",
    "/jGPSVArC0GS2VVc0aGAqGTjfFOG.jpg",
    "/bHarw8xrmQeqf3t8HpuMY7zoK4x.jpg",
    "/pGwChWiAY1bdoxL79sXmaFBlYJH.jpg",
    "/dkMD5qlogeRMiEixC4YNPUvax2T.jpg",
    "/xu9zaAevzQ5nnrsXN6JcahLnG4i.jpg",
    "/eRJMFHOn5jDmfWWPfTs5RflApgW.jpg",
    "/L5QRL1O3fGs2hH1LbtYyVl8Tce.jpg",
    "/n1y094tVDFATSzkTnFxoGZ1qNsG.jpg",
    "/phszHPFVhPHhMZgo0fWTKBDQsJA.jpg",
    "/8AUQ7YlJJA9C8kWk8P4YNHIcFDE.jpg",
    "/mFb0ygcue4ITixDkdr7wm1Tdarx.jpg",
  ],
  "type": "GET_POPULAR_MOVIE_BACKDROPS",
}
`;

exports[`>> Testcase ActionTypes return the correct types 1`] = `
Object {
  "EMPTY_MOVIES": "EMPTY_MOVIES",
  "FETCH_POPULAR_MOVIES_FULFILLED": "FETCH_POPULAR_MOVIES_FULFILLED",
  "FETCH_POPULAR_MOVIES_REJECTED": "FETCH_POPULAR_MOVIES_REJECTED",
  "FETCH_POPULAR_MOVIES_REQUESTED": "FETCH_POPULAR_MOVIES_REQUESTED",
  "FETCH_TOP_REVENUE_MOVIES_FULFILLED": "FETCH_TOP_REVENUE_MOVIES_FULFILLED",
  "FETCH_TOP_REVENUE_MOVIES_REJECTED": "FETCH_TOP_REVENUE_MOVIES_REJECTED",
  "FETCH_TOP_REVENUE_MOVIES_REQUESTED": "FETCH_TOP_REVENUE_MOVIES_REQUESTED",
  "FETCH_TOP_VOTED_MOVIES_FULFILLED": "FETCH_TOP_VOTED_MOVIES_FULFILLED",
  "FETCH_TOP_VOTED_MOVIES_REJECTED": "FETCH_TOP_VOTED_MOVIES_REJECTED",
  "FETCH_TOP_VOTED_MOVIES_REQUESTED": "FETCH_TOP_VOTED_MOVIES_REQUESTED",
  "GET_POPULAR_MOVIE_BACKDROPS": "GET_POPULAR_MOVIE_BACKDROPS",
}
`;

exports[`>> Testcase Reducer returns the same state on an unhandled action 1`] = `
Object {
  "backdrops": Array [],
  "filter": Object {
    "popular": Object {
      "page": 1,
      "result": Array [],
    },
    "topRevenue": Object {
      "page": 1,
      "result": Array [],
    },
    "topVoted": Object {
      "page": 1,
      "result": Array [],
    },
  },
}
`;
